@@ -264,6 +264,8 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+comment|//every test with SlowFuzzyQuery.defaultMinSimilarity
+comment|//is exercising the Automaton, not the brute force linear method
 name|Directory
 name|directory
 init|=
@@ -2144,6 +2146,168 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testFuzzinessLong2
+specifier|public
+name|void
+name|testFuzzinessLong2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|//Lucene-5033
+name|Directory
+name|directory
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|writer
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|directory
+argument_list|)
+decl_stmt|;
+name|addDoc
+argument_list|(
+literal|"abcdef"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"segment"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|SlowFuzzyQuery
+name|query
+decl_stmt|;
+name|query
+operator|=
+operator|new
+name|SlowFuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"abcxxxx"
+argument_list|)
+argument_list|,
+literal|3f
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|ScoreDoc
+index|[]
+name|hits
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|1000
+argument_list|)
+operator|.
+name|scoreDocs
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|query
+operator|=
+operator|new
+name|SlowFuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"abcxxxx"
+argument_list|)
+argument_list|,
+literal|4f
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|1000
+argument_list|)
+operator|.
+name|scoreDocs
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|directory
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|testFuzzinessLong
 specifier|public
 name|void
@@ -3634,16 +3798,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|MockAnalyzer
-name|analyzer
-init|=
-operator|new
-name|MockAnalyzer
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
-decl_stmt|;
 name|Directory
 name|index
 init|=
@@ -4041,23 +4195,216 @@ literal|"field"
 argument_list|)
 argument_list|)
 expr_stmt|;
-comment|// TODO: cannot really be supported given the legacy scoring
-comment|// system which scores negative, if the distance> min term len,
-comment|// so such matches were always impossible with lucene 3.x, etc
-comment|//
-comment|//q = new SlowFuzzyQuery(new Term("field", "t"), 3);
-comment|//hits = searcher.search(q, 10).scoreDocs;
-comment|//assertEquals(1, hits.length);
-comment|//assertEquals("test", searcher.doc(hits[0].doc).get("field"));
-comment|// q = new SlowFuzzyQuery(new Term("field", "a"), 4f, 0, 50);
-comment|// hits = searcher.search(q, 10).scoreDocs;
-comment|// assertEquals(1, hits.length);
-comment|// assertEquals("test", searcher.doc(hits[0].doc).get("field"));
-comment|// q = new SlowFuzzyQuery(new Term("field", "a"), 6f, 0, 50);
-comment|// hits = searcher.search(q, 10).scoreDocs;
-comment|// assertEquals(2, hits.length);
-comment|// assertEquals("test", searcher.doc(hits[0].doc).get("field"));
-comment|// assertEquals("foobar", searcher.doc(hits[1].doc).get("field"));
+name|q
+operator|=
+operator|new
+name|SlowFuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"t"
+argument_list|)
+argument_list|,
+literal|3
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|q
+argument_list|,
+literal|10
+argument_list|)
+operator|.
+name|scoreDocs
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"test"
+argument_list|,
+name|searcher
+operator|.
+name|doc
+argument_list|(
+name|hits
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|q
+operator|=
+operator|new
+name|SlowFuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a"
+argument_list|)
+argument_list|,
+literal|4f
+argument_list|,
+literal|0
+argument_list|,
+literal|50
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|q
+argument_list|,
+literal|10
+argument_list|)
+operator|.
+name|scoreDocs
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"test"
+argument_list|,
+name|searcher
+operator|.
+name|doc
+argument_list|(
+name|hits
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|q
+operator|=
+operator|new
+name|SlowFuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a"
+argument_list|)
+argument_list|,
+literal|6f
+argument_list|,
+literal|0
+argument_list|,
+literal|50
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|q
+argument_list|,
+literal|10
+argument_list|)
+operator|.
+name|scoreDocs
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"test"
+argument_list|,
+name|searcher
+operator|.
+name|doc
+argument_list|(
+name|hits
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"foobar"
+argument_list|,
+name|searcher
+operator|.
+name|doc
+argument_list|(
+name|hits
+index|[
+literal|1
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field"
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|reader
 operator|.
 name|close
